# competing-llm

./: .gitignore  AGENTS.md  README.md  Taskfile.yml  pyproject.toml  ruff.toml
competing_llm/backend/: README.md  app.py
competing_llm/backend/configuration/: config.py  config_settings.py  logger_config.py  model_registry.py
competing_llm/backend/models/: llm.py  schema.py
competing_llm/backend/routers/: chat.py  chat_v2.py
competing_llm/backend/services/: llm_interaction.py  llm_mock.py
competing_llm/backend/tests/: test_chat_api.py  test_llm_mock.py
competing_llm/backend/utils/: llm_utils.py
frontend/: README.md  package-lock.json  package.json  wrangler.toml
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatInput.tsx  LLMSelector.tsx  ResponseCard.tsx  ResponseGrid.tsx
